remove tracker, social, etc

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: takuan.de
 # For a project page here should be a project name. Otherwise (for user's/organization's page leave it empty)
 baseurl: ''
 
-author: Testibal Meier
+author: Takuan
 copyright: 2020
 
 share:
