--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ yandex_metrica:
 disqus: ''
 comments: false
 
-permalink: /:year/:month/:title/
+permalink: /:title/
 
 # Enable for using pages, more details are here: http://jekyllrb.com/docs/pagination/
 #paginate: 3
