add rss to ueber

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 
 name: Takuan
-description: Philosophie ist das Rüstzeug über tief verankerte und versteckte Dinge zu denken. 
+description: Philosophie hat für mich einen konkreten Wert. Sie bietet eine Sprache über Dinge zu sprechen die sonst im Verborgenen bleiben müssten.
 
 # Url is currently only used only for the RSS feed in feed.xml
 url: https://www.takuan.de
