--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ social:
   linkedin:
   instagram: ''
   lastfm: ''
-  rss: feed.xml
+  rss: ''
 
 # Google Analytics key, leave blank to ignore
 google_analytics_key:
